voice control detection and instructions

--- a/index.html
+++ b/index.html
@@ -31,13 +31,15 @@
               </ul>
           </div>
 
-          <h3>How it works:</h3>
           <p>
-              This is basically acroyoga twister: a pose will be chosen randomly and announced!
+              <strong>How it works:</strong> This is basically acroyoga twister: a pose will be chosen randomly and announced!
               For extra challenge, try to move between them directly if possible, or with as few intermediary steps as possible.
           </p>
+          <p class="voice-control" style="display:none;">
+               You'd be able to trigger the next pose with a voice command ("nailed it!"), but the Web Speech API is not supported by this browser. Upgrade to <a href="https://www.google.com/chrome" target="_blank">Chrome</a> version 25 or later to use this feature!
+          </p>
 
-          <!--TODO: use voice to announce poses, use voice recog "nailed it!" to advance, checkboxes for pops, bad sides, and voice announcer -->
+          <!--TODO: checkboxes for pops, bad sides, and voice announcer -->
           
       </section>
     </div>
