randomly suggests using a pop and/or your bad side

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </div>
 
           <p>
-              <strong>How it works:</strong> This is basically acroyoga twister: a pose will be chosen randomly and announced!
+              <strong>How it works:</strong> this is basically acroyoga twister: a pose will be chosen randomly and announced!
               For extra challenge, try to move between them directly if possible, or with as few intermediary steps as possible.
           </p>
           <p class="voice-control" style="display:none;">
