--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               For extra challenge, try to move between them directly if possible, or with as few intermediary steps as possible.
           </p>
           <p class="voice-control" style="display:none;">
-               You'd be able to trigger the next pose with a voice command ("nailed it!"), but the Web Speech API is not supported by this browser. Upgrade to <a href="https://www.google.com/chrome" target="_blank">Chrome</a> version 25 or later to use this feature!
+               You'd be able to trigger the next pose with a voice command ("next please!"), but the Web Speech API is not supported by this browser. Upgrade to <a href="https://www.google.com/chrome" target="_blank">Chrome</a> version 25 or later to use this feature!
           </p>
 
           <!--TODO: checkboxes for pops, bad sides, and voice announcer -->
