second attempt at continuous recognition for mobile

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <div class="clearfix">
               <h1 style="float:left" class="pose-name">click button to start &#8594;</h1>
               <ul style="float:right">
-                  <li><a href="#" class="next-pose">Nailed it! <strong>Next Pose</strong></a></li>
+                  <li><a href="#" class="next-pose">Nailed it! <strong>Next Please</strong></a></li>
               </ul>
           </div>
 
