--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <div class="wrapper">
       <header class="without-description">
-        <h1>Welcome to the acro game. Let's play!!</h1>
+        <h1>Welcome to the acro game. Let's play!</h1>
         <p></p>
       </header>
       <section>
