infinite mode by default

--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
     </footer>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     <script>
-        $(function() { game.init(); })
+        $(function() {
+          //game.init();
+          game.infinite();
+        })
     </script>
   </body>
 </html>
